<resources>
    <string name="app_name">Pixels: Together</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="stat_num_pixels_painted_single">Pixels Single</string>
    <string name="stat_num_pixels_painted_world">Pixels World</string>

    <string name="stat_num_pixel_overwrites_in">Pixel Overwrites In</string>
    <string name="stat_num_pixel_overwrites_out">Pixel Overwrites Out</string>

    <string name="stat_paint_accrued">Paint Accrued</string>

    <string name="stat_world_xp">World Level</string>

    <string name="client_id">454898966293-ii55sno355a2jvrr0qllcljgfe49u9rj.apps.googleusercontent.com</string>

    <string name="option_change_name_title">Display name</string>
    <string name="option_paint_panel_texture_title">Panel Background</string>
    <string name="option_canvas_lock_border_title">Canvas Lock Border</string>
    <string name="option_emitters_container_title">Particle Emitters</string>
    <string name="option_canvas_lock_color_title">Canvas Lock Color</string>
    <string name="option_bold_action_buttons_title">Bold action buttons</string>

    <string name="alert_message_exit_canvas">Are you sure you would like to go back?</string>
    <string name="alert_message_palette_remove_color">Remove this color from %s?</string>
    <string name="no_pixel_history">No data</string>
    <string name="option_num_recent_color_title">Palette size</string>
    <string name="option_paint_indicator_width_title">Current color size</string>
    <string name="option_paint_indicator_fill_circle">Circle current color</string>
    <string name="option_paint_indicator_square">Square current color</string>
    <string name="option_paint_indicator_outline_title">Current color outline</string>
    <string name="option_grid_line_color_title">Grid line color</string>
    <string name="option_canvas_background_primary_color_title">Custom canvas color (1)</string>
    <string name="option_canvas_background_secondary_color_title">Custom canvas color (2)</string>
    <string name="option_frame_color_title">Frame color</string>
    <string name="option_close_paint_panel_color_title">Close panel color</string>
    <string name="step1">Welcome to this quick guide. This will help get you started and fill you in on what you need to know. First, you can connect to one of the public canvases by going to Connect and entering \'SMALL\', \'MEDIUM\', or \'LARGE\', each one is a different size. Once connected you will automatically start to gain pixels that you can use to draw onto the canvas.</string>
    <string name="step2">It\'s worth mentioning that you get a certain amount of pixels over time from each canvas you have connected to. You will get pixels even if you aren\'t online, up to a maximum amount. It\'s limited so that no one person has too much control over a canvas. You can easily export and share pixel art that you see. Just use this icon and select what you want.</string>
    <string name="step3">The canvas is interactive so as you draw, everyone can see what you\'re doing. Finally each pixel keeps a history of edits. Now onto tools… There are a few basic tools. The first lets you change the canvas background to different colors.</string>
    <string name="step4">The next one allows you to turn on and off canvas grid lines. When you are far from the canvas, grid lines are always toggled off.</string>
    <string name="step5">This shows you an overview of the canvas.</string>
    <string name="step6">Use this to show and hide the toolbox. If your camera punch-out is here, simply click right next to the punch-out.</string>
    <string name="step7">Finally this shows and hides your recently used colors. And that\'s all there is to getting started.</string>
    <string name="step8">The default color palette is the Recent Color palette. It is composed of all colors that you have drawn with recently. To add a new color palette
    tap on \"Recent Color\" in the draw panel. Then tap the + button and enter a name for your new palette. The new palette will be added to your list of palettes. Select the new palette by
        tapping on it in the list. As you use the color picker to select colors you will see a + and - sign appear under the palette name in the draw panel. Tap the + icon to add the
        color to the palette or tap the - icon to remove the color from the palette.</string>
    <string name="step9">To create a sizing frame for art, press and hold anywhere on the canvas while not drawing. A frame configuration panel will appear. Enter the width
    and height then tap the Create button to create a frame.</string>
    <string name="step10">To erase pixels, tap anywhere on the canvas where you haven\'t drawn yet with the color picker open to pick the transparent color off the canvas. Then draw back over the
        pixels that you want to erase.</string>
    <string name="option_show_paint_bar_title">Pixel meter bar</string>
    <string name="option_paint_bar_color_title">Pixel meter color</string>
    <string name="option_show_paint_circle_title">Pixel meter circle</string>
    <string name="option_right_handed_title">Right handed</string>
    <string name="option_small_action_buttons_title">Small action buttons</string>
    <string name="pincode_title">8-digit pincode</string>
    <string name="pincode_repeat_title">Repeat 8-digit pincode</string>
    <string name="name_title">Display name</string>
    <string name="old_pincode_title">Old 8-digit pincode</string>
    <string name="credits">Credits</string>
    <string name="deviant_art"><u>Deviant Art</u></string>
    <string name="actual_size">Pixel Size</string>
    <string name="screen_size">Screen Size</string>
    <string name="palettes_title">Palettes</string>
    <string name="draw_frame_config_title">Canvas Frame</string>
    <string name="draw_frame_config_done_button_text">CREATE</string>
    <string name="width_title">Width</string>
    <string name="unit_pixel">px</string>
    <string name="height_title">Height</string>
    <string name="reset_single_play_button_title">ERASE CANVAS</string>
    <string name="reset_single_play_alert_message">This will erase your canvas and all of it\'s contents,
        to proceed please type ERASE CANVAS in all caps.</string>
    <string name="reset_single_play_confirm_string">ERASE CANVAS</string>
    <string name="export_canvas_button_title">EXPORT CANVAS</string>
    <string name="import_canvas_button_title">IMPORT CANVAS</string>
    <string name="draw_menu_title">CANVAS</string>
    <string name="connect_menu_title">SERVER LIST</string>
    <string name="options_menu_title">CUSTOMIZE</string>
    <string name="how_to_menu_title">INFO</string>
    <string name="lefty_menu_title">LEFTY</string>
    <string name="righty_menu_title">RIGHTY</string>
    <string name="options_title">Customize</string>
    <string name="howto_title">Getting Started</string>
    <string name="howto_step2_title">Share</string>
    <string name="howto_step3_title">Change Background</string>
    <string name="howto_step4_title">Grid Lines</string>
    <string name="howto_step5_title">Canvas Summary</string>
    <string name="howto_step6_title">Toggle Tools</string>
    <string name="howto_step7_title">Palette</string>
    <string name="howto_step8_title">Color Palettes</string>
    <string name="howto_step9_title">Frames</string>
    <string name="howto_step10_title">Eraser</string>
    <string name="canvas_export_title_text">Canvas Export</string>
    <string name="canvas_export_email_title">Email address (we don\'t store or share this):</string>
    <string name="canvas_export_confirm_button_text">SEND EMAIL</string>
    <string name="canvas_import_title_text">Canvas Import</string>
    <string name="pastebin_url">Pastebin URL (pastebin.com/code):</string>
    <string name="canvas_import_confirm_button_title">IMPORT</string>
    <string name="replace_canvas_dialog_message">Importing canvas data will replace your current canvas and the canvas will be permanently erased. You may want to
    export your current canvas data first before proceeding. To proceed please type REPLACE CANVAS in all caps.</string>
    <string name="replace_canvas_dialog_confirm_string">REPLACE CANVAS</string>
    <string name="howto_step11_title">Move Objects</string>
    <string name="step11">To move an object tap the export and share button until it turns green (2 taps). Select or drag around the object you want to move.
        Direction indicators will appear. Tap the direction indicators and move the object in any direction. Confirm the move with the green checkmark,
        or cancel with the red x.</string>
    <string name="option_color_palette_size_title">Color palette size</string>
    <string name="hue_value_text">H: %d°</string>
    <string name="saturation_value_text">S: %d%%</string>
    <string name="brightness_value_text">B: %d%%</string>
</resources>
