<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@drawable/gradient_dark_gray">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/back_button">

            <com.ericversteeg.radiofrost.view.ActionButtonView
                    android:id="@+id/stats_image"
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center_horizontal" />

            <LinearLayout
                    android:id="@+id/stat_num_pixels_painted_single_num_container"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="10dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/stat_num_pixels_painted_single"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_weight="1" />

                <TextView
                        android:id="@+id/stat_num_pixels_painted_single"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/stat_num_pixels_painted_world_num_container"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="10dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/stat_num_pixels_painted_world"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_weight="1" />

                <TextView
                        android:id="@+id/stat_num_pixels_painted_world"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/stat_num_pixel_overwrites_in_num_container"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="10dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/stat_num_pixel_overwrites_in"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_weight="1" />

                <TextView
                        android:id="@+id/stat_num_pixel_overwrites_in"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/stat_num_pixel_overwrites_out_num_container"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="10dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/stat_num_pixel_overwrites_out"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_weight="1" />

                <TextView
                        android:id="@+id/stat_num_pixel_overwrites_out"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/stat_paint_accrued_num_container"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="10dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/stat_paint_accrued"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_weight="1" />

                <TextView
                        android:id="@+id/stat_paint_accrued"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/stat_world_xp_container"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="10dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/stat_world_xp"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_weight="1" />

                <TextView
                        android:id="@+id/stat_world_xp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="16sp" />

            </LinearLayout>

            <com.ericversteeg.radiofrost.view.ActionButtonView
                    android:id="@+id/achievements_image"
                    android:layout_width="383dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp" />

            <LinearLayout
                    android:id="@+id/stat_num_pixels_painted_single_container"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="10dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/stat_num_pixels_painted_single"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_weight="1" />

                <TextView
                        android:id="@+id/achievement_progress_text_single"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/stat_num_pixels_painted_world_container"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="10dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/stat_num_pixels_painted_world"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_weight="1" />

                <TextView
                        android:id="@+id/achievement_progress_text_world"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/stat_num_pixel_overwrites_in_container"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="10dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/stat_num_pixel_overwrites_in"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_weight="1" />

                <TextView
                        android:id="@+id/achievement_progress_text_overwrite_in"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/stat_num_pixel_overwrites_out_container"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="10dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/stat_num_pixel_overwrites_out"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_weight="1" />

                <TextView
                        android:id="@+id/achievement_progress_text_overwrite_out"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/stat_paint_accrued_container"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="10dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/stat_paint_accrued"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_weight="1" />

                <TextView
                        android:id="@+id/achievement_progress_text_paint"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <com.ericversteeg.radiofrost.view.ActionButtonFrame
        android:id="@+id/back_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <com.ericversteeg.radiofrost.view.ActionButtonView
                android:id="@+id/back_action"
                android:layout_width="49dp"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:layout_gravity="start|top" />

    </com.ericversteeg.radiofrost.view.ActionButtonFrame>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/achievement_icon_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:background="#CC000000">

        <FrameLayout
                android:id="@+id/achievement_icon_container"
                android:layout_width="445dp"
                android:layout_height="60dp"
                android:background="@drawable/achievement_icon_background"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>